--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="header-navigation">
             <a class="nav-link" href="./index.html"><span class="accent">Web</span><span class="accent-two">Studio</span></a>
             <ul class="menu">
-                <li><a class="nav-link current" href="./index.html">Студія</a></li>
+                <li><a class="nav-link" href="./index.html">Студія</a></li>
                 <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
                 <li><a class="nav-link" href="">Контакти</a></li>
             </ul>
@@ -29,7 +29,7 @@
         </div>
     </header>
  <main>
-    <section class="hero">
+    <section class="hero section">
         <div class="container hero-box">
             <h1 class="headline">Ефективні рішення для вашого бізнесу</h1>
             <button class="cursor" type="button">Замовити послугу</button>
