--- a/index.html
+++ b/index.html
@@ -17,19 +17,22 @@
             <nav class="header-navigation">
             <a class="nav-link" href="./index.html"><span class="accent">Web</span><span class="accent-two">Studio</span></a>
             <ul class="menu">
-                <li><a class="nav-link" href="./index.html">Студія</a></li>
+                <li><a class="nav-link active" href="./index.html">Студія</a></li>
                 <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
                 <li><a class="nav-link" href="">Контакти</a></li>
             </ul>
         </nav>
         <ul class="contact">
-            <li><a class="nav-link-contakts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="nav-link-contakts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="contact-link" href="#"><svg class="social-icon" width="16" height="12"><use href="/images/sprite.svg#icon-email"></use></svg></a></li>
+            <li><a class="nav-link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-link" href="#"><svg class="social-icon" width="10" height="16"><use href="/images/sprite.svg#icon-tel"></use></svg></a></li>
+            <li><a class="nav-link-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            
         </ul>
         </div>
     </header>
  <main>
-    <section class="hero section">
+    <section class="hero">
         <div class="container hero-box">
             <h1 class="headline">Ефективні рішення для вашого бізнесу</h1>
             <button class="cursor" type="button">Замовити послугу</button>
@@ -38,6 +41,36 @@
     <section class="features section">
         <div class="container features-section">
         <h2 class="visually-hidden">Наші переваги</h2>
+       <ul class="features-section-link">
+        <li class="features-section-icon">
+            <a href="" class="navigation-social-icon">
+                <svg class="social-icon" width="66" height="70">
+                    <use href="/images/sprite.svg#icon-antenna"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="features-section-icon">
+            <a href="" class="navigation-social-icon">
+                <svg class="social-icon" width="66" height="70">
+                    <use href="/images/sprite.svg#icon-clock"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="features-section-icon">
+            <a href="" class="navigation-social-icon">
+                <svg class="social-icon" width="70" height="54">
+                    <use href="/images/sprite.svg#icon-diagram"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="features-section-icon">
+            <a href="" class="navigation-social-icon">
+                <svg class="social-icon" width="57" height="61">
+                    <use href="/images/sprite.svg#icon-astronaut"></use>
+                </svg>
+            </a>
+        </li>
+       </ul>
         <ul class="features-section-list">
                 <li class="features-list">
                     <div class="features-list-box">
@@ -50,7 +83,7 @@
                         <h3 class="subject">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </div>
-                </li class="features-list">
+                </li>
                  <li class="features-list">
                     <div class="features-list-box">
                         <h3 class="subject">ПЛАНУВАННЯ</h3>
@@ -84,24 +117,144 @@
                         <div class="jop-list-item-box">
                             <h3 class="job-name">Ігор Дем'яненко</h3>
                             <p class="job-titl" lang="en">Product Designer</p>
-                        </div>
+                            <ul class="job-items">
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                               </ul>
+                            </div>
                     </li>
                     <li class="jop-list-item"><img src="./images/job2.jpg" alt="Ольга Рєпіна" width="270">
                         <div class="jop-list-item-box">
                             <h3 class="job-name">Ольга Рєпіна</h3>
                             <p class="job-titl" lang="en">Frontend Developer</p>
+                            <ul class="job-items">
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                               </ul>
                         </div>
                     </li>
                     <li class="jop-list-item"><img src="./images/job3.jpg" alt="Микола Тарасов" width="270">
                         <div class="jop-list-item-box">
                             <h3 class="job-name">Микола Тарасов</h3>
                             <p class="job-titl" lang="en">Marketing</p>
+                            <ul class="job-items">
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                               </ul>
                         </div>
                     </li>
                     <li class="jop-list-item"><img src="./images/job4.jpg" alt="Михайло Єрмаков" width="270">
                         <div class="jop-list-item-box">
                             <h3 class="job-name">Михайло Єрмаков</h3>
                             <p class="job-titl" lang="en">UI Designer</p>
+                            <ul class="job-items">
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="job-items-icon">
+                                    <a href="" class="job-social-icon">
+                                        <svg class="job-item-social-icon" width="20" height="20">
+                                            <use href="/images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                               </ul>
                         </div>
                         </li>
                 </ul>
