--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,13 @@
                 <a class="nav-link" href="./index.html"><span class="accent">Web</span><span class="accent-two">Studio</span></a>
                 <ul class="menu">
                     <li><a class="nav-link" href="./index.html">Студія</a></li>
-                    <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+                    <li><a class="nav-link active" href="./portfolio.html">Портфоліо</a></li>
                     <li><a class="nav-link" href="">Контакти</a></li>
                 </ul>
             </nav>
             <ul class="contact">
-                <li><a class="nav-link-contakts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="nav-link-contakts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="nav-link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="nav-link-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
             </div>
         </header>
