--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <li><a class="nav-link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="contact-link" href="#"><svg class="social-icon" width="10" height="16"><use href="/images/sprite.svg#icon-tel"></use></svg></a></li>
             <li><a class="nav-link-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            
         </ul>
         </div>
     </header>
@@ -260,18 +259,102 @@
                 </ul>
         </div>
     </section>
+   <section class="client section">
+    <div class="container">
+        <h2 class="heading">Постійні клієнти</h2>
+        <ul class="client-item">
+            <li class="client-list">
+                <a href="" class="client-social-icon">
+                    <svg class="link-social-icon" width="41" height="46.7">
+                        <use href="/images/sprite.svg#icon-client1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="client-list">
+                <a href="" class="client-social-icon">
+                    <svg class="link-social-icon" width="40" height="52">
+                        <use href="/images/sprite.svg#icon-client2"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="client-list">
+                <a href="" class="client-social-icon">
+                    <svg class="link-social-icon" width="43.46" height="41.18">
+                        <use href="/images/sprite.svg#icon-client3"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="client-list">
+                <a href="" class="client-social-icon">
+                    <svg class="link-social-icon" width="84.44" height="40.62">
+                        <use href="/images/sprite.svg#icon-client4"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="client-list">
+                <a href="" class="client-social-icon">
+                    <svg class="link-social-icon" width="62.54" height="45.43">
+                        <use href="/images/sprite.svg#icon-client5"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="client-list">
+                <a href="" class="client-social-icon">
+                    <svg class="link-social-icon" width="93.79" height="43.93">
+                        <use href="/images/sprite.svg#icon-client1"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
+   </section>
  </main>
  <!--Футер-->
  <footer class="footer">
-    <div class="container">
-    <a class="nav-link" href="./index.html"><span class="accent">Web</span><span class="accent-three">Studio</span></a>
-    <address class="footer-address">
-        <ul>
-            <li class="list-address"><a class="nav-link-adres" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li class="list-mail"><a class="nav-link-kont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="list-tel"><a class="nav-link-kont" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <div class="container footer">
+        <div class="footer-logo-address">
+            <a class="nav-link" href="./index.html"><span class="accent">Web</span><span class="accent-three">Studio</span></a>
+                <address>
+                <ul class="footer-address">
+                <li class="list-address"><a class="nav-link-adres" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li class="list-mail"><a class="nav-link-kont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="list-tel"><a class="nav-link-kont" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+                </address>
+        </div>
+    <div class="social">
+        <h4 class="name-social">приєднуйтесь</h4>
+        <ul class="social-list">
+            <li class="social-items-icon">
+                <a href="" class="social-items-icon-link">
+                    <svg class="social-items-icon-link-list" width="20" height="20">
+                        <use href="/images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="job-items-icon">
+                <a href="" class="social-items-icon-link">
+                    <svg class="social-items-icon-link-list" width="20" height="20">
+                        <use href="/images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="job-items-icon">
+                <a href="" class="social-items-icon-link">
+                    <svg class="social-items-icon-link-list" width="20" height="20">
+                        <use href="/images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="job-items-icon">
+                <a href="" class="social-items-icon-link">
+                    <svg class="social-items-icon-link-list" width="20" height="20">
+                        <use href="/images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
         </ul>
-    </address>
+    </div>
     </div>
 </footer>
 </body>
