--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,9 @@
                 </ul>
             </nav>
             <ul class="contact">
+                <li><a class="contact-link" href="#"><svg class="social-icon" width="16" height="12"><use href="/images/sprite.svg#icon-email"></use></svg></a></li>
                 <li><a class="nav-link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contact-link" href="#"><svg class="social-icon" width="10" height="16"><use href="/images/sprite.svg#icon-tel"></use></svg></a></li>
                 <li><a class="nav-link-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
             </div>
@@ -46,71 +48,105 @@
                     <p class="desc">Веб-сайт</p>
                 </div>
             </li>
-            <li class=""><img src="./images/golden-star.jpg" alt="Постер" width="370">
+            <li class="aside-list"><img src="./images/golden-star.jpg" alt="Постер" width="370">
                 <div class="aside-list-items">
                     <h2 class="caption">Постер New Orlean vs Golden Star</h2>
                     <p class="desc">Дизайн</p>
                 </div>
             </li>
-            <li class=""><img src="./images/seafood.jpg" alt="лого Ресторана" width="370">
+            <li class="aside-list"><img src="./images/seafood.jpg" alt="лого Ресторана" width="370">
                 <div class="aside-list-items">
                     <h2 class="caption">Ресторан Seafood</h2>
                     <p class="desc">Додаток</p>
                 </div>
             </li>
-            <li class=""><img src="./images/prime.jpg" alt="навушники" width="370">
+            <li class="aside-list"><img src="./images/prime.jpg" alt="навушники" width="370">
                 <div class="aside-list-items">
                     <h2 class="caption">Проєкт Prime</h2>
                     <p class="desc">Маркетинг</p>
                 </div>
             </li>
-            <li class=""><img src="./images/boxes.jpg" alt="Проект Бокси" width="370">
+            <li class="aside-list"><img src="./images/boxes.jpg" alt="Проект Бокси" width="370">
                 <div class="aside-list-items">
                     <h2 class="caption">Проєкт Boxes</h2>
                     <p class="desc">Додаток</p>
                 </div>
             </li>
-            <li class=""><img src="./images/borders.jpg" alt="Сайт" width="370">
+            <li class="aside-list"><img src="./images/borders.jpg" alt="Сайт" width="370">
                 <div class="aside-list-items">
                     <h2 class="caption" lang="en">Inspiration has no Borders</h2>
                     <p class="desc">Веб-сайт</p>
                 </div>
             </li>
-            <li class=""><img src="./images/limited-edition.jpg" alt="Разворот Книги" width="370">
+            <li class="aside-list"><img src="./images/limited-edition.jpg" alt="Разворот Книги" width="370">
                 <div class="aside-list-items">
                     <h2 class="caption">Видання Limited Edition</h2>
                     <p class="desc">Дизайн</p>
                 </div>
             </li>
-            <li class=""><img src="./images/lab.jpg" alt="Лейба" width="370">
+            <li class="aside-list"><img src="./images/lab.jpg" alt="Лейба" width="370">
                 <div class="aside-list-items">
                     <h2 class="caption">Проєкт LAB</h2>
                     <p class="desc">Маркетинг</p>
                 </div> 
             </li>
-            <li class=""><img src="./images/growing-busines.jpg" alt="Лейба" width="370">
+            <li class="aside-list"><img src="./images/growing-busines.jpg" alt="Лейба" width="370">
                 <div class="aside-list-items">
                     <h2 class="caption" lang="en"> Growing Business</h2>
                     <p class="desc">Додаток</p>
                 </div>                
             </li>
     </ul>
-
     </div>
     </section>
    
 </main>
  <!--Футер-->
  <footer class="footer">
-    <div class="container">
-    <a class="nav-link" href="./index.html"><span class="accent">Web</span><span class="accent-three">Studio</span></a>
-    <address class="footer-address">
-        <ul>
-            <li class="list-address"><a class="nav-link-adres" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li class="list-mail"><a class="nav-link-kont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="list-tel"><a class="nav-link-kont" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <div class="container footer">
+        <div class="footer-logo-address">
+            <a class="nav-link" href="./index.html"><span class="accent">Web</span><span class="accent-three">Studio</span></a>
+                <address>
+                <ul class="footer-address">
+                <li class="list-address"><a class="nav-link-adres" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li class="list-mail"><a class="nav-link-kont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="list-tel"><a class="nav-link-kont" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+                </address>
+        </div>
+    <div class="social">
+        <h4 class="name-social">приєднуйтесь</h4>
+        <ul class="social-list">
+            <li class="social-items-icon">
+                <a href="" class="social-items-icon-link">
+                    <svg class="social-items-icon-link-list" width="20" height="20">
+                        <use href="/images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="job-items-icon">
+                <a href="" class="social-items-icon-link">
+                    <svg class="social-items-icon-link-list" width="20" height="20">
+                        <use href="/images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="job-items-icon">
+                <a href="" class="social-items-icon-link">
+                    <svg class="social-items-icon-link-list" width="20" height="20">
+                        <use href="/images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="job-items-icon">
+                <a href="" class="social-items-icon-link">
+                    <svg class="social-items-icon-link-list" width="20" height="20">
+                        <use href="/images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
         </ul>
-    </address>
+    </div>
     </div>
 </footer>
 </body>
