--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </ul>
         </nav>
         <ul class="contact">
-            <li><a class="contact-link" href="#"><svg class="social-icon" width="16" height="12"><use href="/images/sprite.svg#icon-email"></use></svg></a></li>
+            <li><a class="contact-link" href="#"><svg class="social-icon" width="16" height="12"><use href="./images/sprite.svg#icon-email"></use></svg></a></li>
             <li><a class="nav-link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact-link" href="#"><svg class="social-icon" width="10" height="16"><use href="/images/sprite.svg#icon-tel"></use></svg></a></li>
+            <li><a class="contact-link" href="#"><svg class="social-icon" width="10" height="16"><use href="./images/sprite.svg#icon-tel"></use></svg></a></li>
             <li><a class="nav-link-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
         </div>
@@ -44,28 +44,28 @@
         <li class="features-section-icon">
             <a href="" class="navigation-social-icon">
                 <svg class="social-icon" width="66" height="70">
-                    <use href="/images/sprite.svg#icon-antenna"></use>
+                    <use href="./images/sprite.svg#icon-antenna"></use>
                 </svg>
             </a>
         </li>
         <li class="features-section-icon">
             <a href="" class="navigation-social-icon">
                 <svg class="social-icon" width="66" height="70">
-                    <use href="/images/sprite.svg#icon-clock"></use>
+                    <use href="./images/sprite.svg#icon-clock"></use>
                 </svg>
             </a>
         </li>
         <li class="features-section-icon">
             <a href="" class="navigation-social-icon">
                 <svg class="social-icon" width="70" height="54">
-                    <use href="/images/sprite.svg#icon-diagram"></use>
+                    <use href="./images/sprite.svg#icon-diagram"></use>
                 </svg>
             </a>
         </li>
         <li class="features-section-icon">
             <a href="" class="navigation-social-icon">
                 <svg class="social-icon" width="57" height="61">
-                    <use href="/images/sprite.svg#icon-astronaut"></use>
+                    <use href="./images/sprite.svg#icon-astronaut"></use>
                 </svg>
             </a>
         </li>
@@ -120,28 +120,28 @@
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-instagram"></use>
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-twitter"></use>
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-facebook"></use>
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-linkedin"></use>
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -156,28 +156,28 @@
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-instagram"></use>
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-twitter"></use>
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-facebook"></use>
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-linkedin"></use>
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -192,28 +192,28 @@
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-instagram"></use>
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-twitter"></use>
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-facebook"></use>
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-linkedin"></use>
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -228,28 +228,28 @@
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-instagram"></use>
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-twitter"></use>
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-facebook"></use>
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="job-items-icon">
                                     <a href="" class="job-social-icon">
                                         <svg class="job-item-social-icon" width="20" height="20">
-                                            <use href="/images/sprite.svg#icon-linkedin"></use>
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -266,42 +266,42 @@
             <li class="client-list">
                 <a href="" class="client-social-icon">
                     <svg class="link-social-icon" width="41" height="46.7">
-                        <use href="/images/sprite.svg#icon-client1"></use>
+                        <use href="./images/sprite.svg#icon-client1"></use>
                     </svg>
                 </a>
             </li>
             <li class="client-list">
                 <a href="" class="client-social-icon">
                     <svg class="link-social-icon" width="40" height="52">
-                        <use href="/images/sprite.svg#icon-client2"></use>
+                        <use href="./images/sprite.svg#icon-client2"></use>
                     </svg>
                 </a>
             </li>
             <li class="client-list">
                 <a href="" class="client-social-icon">
                     <svg class="link-social-icon" width="43.46" height="41.18">
-                        <use href="/images/sprite.svg#icon-client3"></use>
+                        <use href="./images/sprite.svg#icon-client3"></use>
                     </svg>
                 </a>
             </li>
             <li class="client-list">
                 <a href="" class="client-social-icon">
                     <svg class="link-social-icon" width="84.44" height="40.62">
-                        <use href="/images/sprite.svg#icon-client4"></use>
+                        <use href="./images/sprite.svg#icon-client4"></use>
                     </svg>
                 </a>
             </li>
             <li class="client-list">
                 <a href="" class="client-social-icon">
                     <svg class="link-social-icon" width="62.54" height="45.43">
-                        <use href="/images/sprite.svg#icon-client5"></use>
+                        <use href="./images/sprite.svg#icon-client5"></use>
                     </svg>
                 </a>
             </li>
             <li class="client-list">
                 <a href="" class="client-social-icon">
                     <svg class="link-social-icon" width="93.79" height="43.93">
-                        <use href="/images/sprite.svg#icon-client1"></use>
+                        <use href="./images/sprite.svg#icon-client1"></use>
                     </svg>
                 </a>
             </li>
@@ -328,28 +328,28 @@
             <li class="social-items-icon">
                 <a href="" class="social-items-icon-link">
                     <svg class="social-items-icon-link-list" width="20" height="20">
-                        <use href="/images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
             <li class="job-items-icon">
                 <a href="" class="social-items-icon-link">
                     <svg class="social-items-icon-link-list" width="20" height="20">
-                        <use href="/images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="job-items-icon">
                 <a href="" class="social-items-icon-link">
                     <svg class="social-items-icon-link-list" width="20" height="20">
-                        <use href="/images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="job-items-icon">
                 <a href="" class="social-items-icon-link">
                     <svg class="social-items-icon-link-list" width="20" height="20">
-                        <use href="/images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                 </a>
             </li>
