--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
                 </ul>
             </nav>
             <ul class="contact">
-                <li><a class="contact-link" href="#"><svg class="social-icon" width="16" height="12"><use href="/images/sprite.svg#icon-email"></use></svg></a></li>
+                <li><a class="contact-link" href="#"><svg class="social-icon" width="16" height="12"><use href="./images/sprite.svg#icon-email"></use></svg></a></li>
                 <li><a class="nav-link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contact-link" href="#"><svg class="social-icon" width="10" height="16"><use href="/images/sprite.svg#icon-tel"></use></svg></a></li>
+                <li><a class="contact-link" href="#"><svg class="social-icon" width="10" height="16"><use href="./images/sprite.svg#icon-tel"></use></svg></a></li>
                 <li><a class="nav-link-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
             </div>
@@ -120,28 +120,28 @@
             <li class="social-items-icon">
                 <a href="" class="social-items-icon-link">
                     <svg class="social-items-icon-link-list" width="20" height="20">
-                        <use href="/images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
             <li class="job-items-icon">
                 <a href="" class="social-items-icon-link">
                     <svg class="social-items-icon-link-list" width="20" height="20">
-                        <use href="/images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="job-items-icon">
                 <a href="" class="social-items-icon-link">
                     <svg class="social-items-icon-link-list" width="20" height="20">
-                        <use href="/images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="job-items-icon">
                 <a href="" class="social-items-icon-link">
                     <svg class="social-items-icon-link-list" width="20" height="20">
-                        <use href="/images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                 </a>
             </li>
