--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,8 @@
                 </ul>
             </nav>
             <ul class="contact">
-                <li><a class="nav-link-contacts" href="#"><svg class="social-icon" width="16" height="12"><use href="./images/sprite.svg#icon-email"></use></svg></a></li>
-                <li><a class="nav-link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="nav-link-contacts" href="#"><svg class="social-icon" width="10" height="16"><use href="./images/sprite.svg#icon-tel"></use></svg></a></li>
-                <li><a class="nav-link-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="contact-navigation"><a class="nav-link-contacts" href="mailto:info@devstudio.com"><svg class="social-icon" width="16" height="12"><use href="./images/sprite.svg#icon-email"></use></svg>info@devstudio.com</a></li>
+                <li class="contact-navigation"><a class="nav-link-contacts" href="tel:+380961111111"><svg class="social-icon" width="10" height="16"><use href="./images/sprite.svg#icon-tel"></use></svg>+38 096 111 11 11</a></li>
             </ul>
             </div>
         </header>
